feat: GitHub 기능 강화 및 비즈니스 라이선스 적용
- LICENSE: Proprietary 라이선스 추가 (parkdavid31@gmail.com)
- README.md: CI 배지, 라이선스 배지, 프로젝트 구조 추가
- .gitignore: Go, Node.js, IDE 관련 패턴 확장
- Issue Templates: Bug Report, Feature Request 템플릿 추가
- PR Template: Pull Request 템플릿 추가
- CONTRIBUTING.md: 기여 가이드라인 추가
- SECURITY.md: 보안 정책 추가
- CODEOWNERS: 코드 리뷰어 자동 지정 설정
- FUNDING.yml: 후원 정보 추가

--- a/.gitignore
+++ b/.gitignore
@@ -10,23 +10,61 @@ secrets/
 *.key
 *.ca
 
-# 의존성
+# Go
 vendor/
-
-# 빌드 출력물
 bin/
-dist/
 *.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+go.work.sum
+
+# Node.js / Frontend
+node_modules/
+dist/
+build/
+.next/
+.nuxt/
+.cache/
+.parcel-cache/
+*.tsbuildinfo
+.npm
+.pnpm-store/
+.yarn/
 
 # IDE 설정
 .idea/
 .vscode/
 *.swp
 *.swo
+*.sublime-*
 
 # OS 파일
 .DS_Store
+.DS_Store?
+._*
 Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# 로그
+# 로그 및 임시 파일
 *.log
+logs/
+tmp/
+temp/
+*.tmp
+*.bak
+
+# 테스트 커버리지
+coverage/
+*.cover
+*.coverage
+.nyc_output/
+htmlcov/
+
+# Docker
+docker-compose.override.yml
