chore: GitHub org 변경 (Prometheus-P → x-ordo) 및 CLAUDE.md 개선
- README.md: CI 배지 및 Issues 링크 x-ordo로 변경
- CODEOWNERS: 코드 리뷰어 x-ordo로 변경
- CONTRIBUTING.md: 이슈 링크 x-ordo로 변경
- docs/APPLY_ORDER.md: 예제 명령어 x-ordo로 변경
- 30_update_branding_en.sh: 사용 예시 x-ordo로 변경
- CLAUDE.md: 프로젝트별 개발 가이드로 개선 (빌드 명령어, 아키텍처 다이어그램 추가)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,20 +2,20 @@
 # 이 파일은 코드 리뷰어를 자동으로 지정합니다.
 
 # 전체 리포지토리
-* @Prometheus-P
+* @x-ordo
 
 # Frontend
-/frontend/ @Prometheus-P
+/frontend/ @x-ordo
 
 # Backend
-/backend/ @Prometheus-P
+/backend/ @x-ordo
 
 # Infrastructure
-/infra/ @Prometheus-P
+/infra/ @x-ordo
 
 # Documentation
-*.md @Prometheus-P
-/docs/ @Prometheus-P
+*.md @x-ordo
+/docs/ @x-ordo
 
 # GitHub configurations
-/.github/ @Prometheus-P
+/.github/ @x-ordo
